--- a/modules/drivers/gnss/CMakeLists.txt
+++ b/modules/drivers/gnss/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 2.8.3)
 project(gnss_driver)
 
 find_package(catkin REQUIRED COMPONENTS
-  nodelet
-  roscpp
-  std_msgs
-  tf2_ros
+    nodelet
+    roscpp
+    std_msgs
+    tf2_ros
 )
 
 catkin_package(
@@ -21,12 +21,12 @@ endif()
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
 
 find_package(Proj)
-IF (DEFINED PROTOBUF_LIBRARIES)
+if(DEFINED PROTOBUF_LIBRARIES)
     MESSAGE(STATUS "proto: " ${PROTOBUF_LIBRARIES})
-ELSE()
+else()
     set(PROTOBUF_LIBRARIES "protobuf")
     MESSAGE(STATUS "proto: " ${PROTOBUF_LIBRARIES})
-ENDIF (defined PROTOBUF_LIBRARIES)
+endif()
 
 set(MODULE_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../")
 set(COMMON_PROTO_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/common/proto/")
@@ -41,20 +41,20 @@ link_directories(lib)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-SET(ERROR_CODE_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/common/proto/error_code.pb.cc")
-SET(HEADER_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/common/proto/header.pb.cc")
-SET(GEOMETRY_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/common/proto/geometry.pb.cc")
+set(ERROR_CODE_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/common/proto/error_code.pb.cc")
+set(HEADER_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/common/proto/header.pb.cc")
+set(GEOMETRY_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/common/proto/geometry.pb.cc")
 
-SET(LOCALIZATION_POSE_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/localization/proto/pose.pb.cc")
-SET(LOCALIZATION_GPS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/localization/proto/gps.pb.cc")
-SET(LOCALIZATION_IMU_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/localization/proto/imu.pb.cc")
+set(LOCALIZATION_POSE_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/localization/proto/pose.pb.cc")
+set(LOCALIZATION_GPS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/localization/proto/gps.pb.cc")
+set(LOCALIZATION_IMU_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules/localization/proto/imu.pb.cc")
 
-SET(GNSS_STATUS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/gnss_status.pb.cc")
-SET(CONFIG_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/config.pb.cc")
-SET(GPGGA_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/gpgga.pb.cc")
-SET(GNSS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/gnss.pb.cc")
-SET(IMU_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/imu.pb.cc")
-SET(INS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/ins.pb.cc")
+set(GNSS_STATUS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/gnss_status.pb.cc")
+set(CONFIG_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/config.pb.cc")
+set(GPGGA_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/gpgga.pb.cc")
+set(GNSS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/gnss.pb.cc")
+set(IMU_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/imu.pb.cc")
+set(INS_PB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proto/ins.pb.cc")
 
 add_library(utils src/impl/utils.cpp ${CONFIG_PB_SRCS} ${GPGGA_PB_SRCS} ${GNSS_PB_SRCS} ${IMU_PB_SRCS} ${INS_PB_SRCS} ${GNSS_STATUS_PB_SRCS} ${LOCALIZATION_POSE_PB_SRCS} ${LOCALIZATION_IMU_PB_SRCS} ${LOCALIZATION_GPS_PB_SRCS} ${HEADER_PB_SRCS} ${ERROR_CODE_SRCS} ${GEOMETRY_PB_SRCS})
 target_link_libraries(utils ${catkin_LIBRARIES} ${PROTOBUF_LIBRARIES})
@@ -76,10 +76,10 @@ add_executable(test_monitor tests/test_monitor.cpp)
 target_link_libraries(test_monitor utils ${catkin_LIBRARIES} ${PROTOBUF_LIBRARIES})
 
 install(
-     TARGETS stream_nodelet parser_nodelet tf_broadcaster_nodelet utils test_monitor
-     ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-     LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+    TARGETS stream_nodelet parser_nodelet tf_broadcaster_nodelet utils test_monitor
+    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
 install(FILES nodelets.xml
