display obstacle id in Dreamview

--- a/modules/dreamview/frontend/src/store/config/parameters.yml
+++ b/modules/dreamview/frontend/src/store/config/parameters.yml
@@ -49,6 +49,7 @@ options:
     showObstaclesUnknown: true
     showObstaclesVirtual: false
     showObstaclesArrow: true
+    showObstaclesId: true
     cameraAngle: Default
 debug:
   # Turn this on for monitor related debugging
