feature: change configuration, normalize weight with number of points bugfix: fix reference guide line bug add unit test

--- a/modules/planning/math/smoothing_spline/BUILD
+++ b/modules/planning/math/smoothing_spline/BUILD
@@ -190,4 +190,16 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "spline_1d_generator_test",
+    size = "small",
+    srcs = [
+        "spline_1d_generator_test.cc",
+    ],
+    deps = [
+        ":spline_1d_generator",
+        "@gtest//:main",
+    ],
+)
+
 cpplint()
