fix roi_filter bug

--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -42,6 +42,8 @@
 # default: 1
 --map_sample_step=1
 
+# --map_file_path=modules/map/data/sunnyvale_loop.xml.txt
+
 ####################################################################
 # Flags from obstacle/onboard/lidar_process.cc
 # enable hdmap input for roi filter
