--- a/modules/planning/math/frame_conversion/BUILD
+++ b/modules/planning/math/frame_conversion/BUILD
@@ -14,6 +14,8 @@ cc_library(
         "//modules/common:log",
         "//modules/common/math:math_utils",
         "//modules/common/math:vec2d",
+        "//modules/planning/math:double",
+        "@eigen//:eigen",
     ],
 )
 
