planning: code clean-up after the merge of FrameConverter

--- a/modules/planning/optimizer/qp_spline_path/BUILD
+++ b/modules/planning/optimizer/qp_spline_path/BUILD
@@ -30,7 +30,7 @@ cc_library(
         "//modules/planning/common/path:path_data",
         "//modules/planning/common/speed:speed_data",
         "//modules/planning/math:polynomial_xd",
-        "//modules/planning/math:sl_analytic_transformation",
+        "//modules/planning/math/frame_conversion:cartesian_frenet_conversion",
         "//modules/planning/math/curve1d:polynomial_curve1d",
         "//modules/planning/math/curve1d:quintic_polynomial_curve1d",
         "//modules/planning/math/smoothing_spline:spline_1d_constraint",
