optimize map proto (#813)
* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* update hdmap proto

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* update hdmap proto

* confict merge

* format code

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* update hdmap proto

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* update hdmap proto

* confict merge

* format code

* merge conflict

* merge conflict

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* update hdmap proto

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* update hdmap proto

* confict merge

* format code

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update hdmap proto

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* format code and update map proto

* adjust proto

* update opendrive adapter to support road

* update hdmap proto

* confict merge

* format code

* merge conf

--- a/modules/map/hdmap/BUILD
+++ b/modules/map/hdmap/BUILD
@@ -19,6 +19,7 @@ cc_library(
         "//modules/common/math",
         "//modules/common/util",
         "//modules/map/proto:map_proto",
+        "//modules/map/hdmap/adapter:opendrive_adapter",
         "@glog//:glog",
     ],
 )
