--- a/modules/map/hdmap/adapter/BUILD
+++ b/modules/map/hdmap/adapter/BUILD
@@ -5,8 +5,6 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "opendrive_adapter",
     srcs = [
-        "coordinate_convert_tool.cc",
-        "proto_reorganization.cc",
         "xml_parser/header_xml_parser.cc",
         "xml_parser/junctions_xml_parser.cc",
         "xml_parser/lanes_xml_parser.cc",
@@ -14,10 +12,11 @@ cc_library(
         "xml_parser/roads_xml_parser.cc",
         "xml_parser/signals_xml_parser.cc",
         "xml_parser/util_xml_parser.cc",
+        "coordinate_convert_tool.cc",
+        "proto_reorganization.cc",
+        "opendrive_adapter.cc",
     ],
     hdrs = [
-        "coordinate_convert_tool.h",
-        "proto_reorganization.h",
         "xml_parser/common_define.h",
         "xml_parser/header_xml_parser.h",
         "xml_parser/junctions_xml_parser.h",
@@ -27,6 +26,9 @@ cc_library(
         "xml_parser/signals_xml_parser.h",
         "xml_parser/status.h",
         "xml_parser/util_xml_parser.h",
+        "coordinate_convert_tool.h",
+        "proto_reorganization.h",
+        "opendrive_adapter.h",
     ],
     deps = [
         "//modules/common/math",
@@ -35,6 +37,16 @@ cc_library(
         "@glog//:glog",
         "@proj4//:proj4",
         "@tinyxml2//:tinyxml2",
+    ],
+)
+
+cc_binary(
+    name = "opendrive_to_pb",
+    srcs = ["main.cc"],
+    deps = [
+        ":opendrive_adapter",
+        "//modules/common/util",
+        "//modules/map/proto:map_proto",
     ],
 )
 
