Common: Add global flagfile to centralize common settings.

--- a/modules/map/hdmap/BUILD
+++ b/modules/map/hdmap/BUILD
@@ -16,6 +16,7 @@ cc_library(
     ],
     deps = [
         "//modules/common:macro",
+        "//modules/common/configs:config_gflags",
         "//modules/common/math",
         "//modules/common/util",
         "//modules/map/proto:map_proto",
