separate arrows for obstacle velocity and heading (#868)

--- a/modules/dreamview/frontend/src/store/config/parameters.yml
+++ b/modules/dreamview/frontend/src/store/config/parameters.yml
@@ -48,7 +48,8 @@ options:
     showObstaclesUnknownUnmovable: true
     showObstaclesUnknown: true
     showObstaclesVirtual: false
-    showObstaclesArrow: true
+    showObstaclesVelocity: true
+    showObstaclesHeading: true
     showObstaclesId: true
     cameraAngle: Default
 debug:
