Prediction: small change to prediction conf

--- a/modules/prediction/conf/prediction.conf
+++ b/modules/prediction/conf/prediction.conf
@@ -1,3 +1,4 @@
+--flagfile=modules/common/data/global_flagfile.txt
 --alsologtostderr=1
 --v=4
 --adapter_config_path=modules/prediction/conf/adapter.conf
