--- a/modules/map/tools/BUILD
+++ b/modules/map/tools/BUILD
@@ -38,6 +38,7 @@ cc_binary(
         "//modules/common/configs:config_gflags",
         "//modules/common/util",
         "//modules/common/util:points_downsampler",
+        "//modules/map/hdmap/adapter:opendrive_adapter",
         "//modules/map/proto:map_proto",
     ],
 )
