Map: Refactor to use map_dir to config map data bundle. (#900)
* Map: Refactor to use map_dir to config map data bundle.

* Map: Code style fix.

* Hot fix.

--- a/modules/map/hdmap/BUILD
+++ b/modules/map/hdmap/BUILD
@@ -13,6 +13,7 @@ cc_library(
         "hdmap.h",
         "hdmap_common.h",
         "hdmap_impl.h",
+        "hdmap_util.h",
     ],
     deps = [
         "//modules/common:macro",
