[Control] Add pid controller with integral clamping anti windup

--- a/modules/control/common/BUILD
+++ b/modules/control/common/BUILD
@@ -83,6 +83,22 @@ cc_library(
 )
 
 cc_library(
+    name = "pid_IC_controller",
+    srcs = [
+        "pid_IC_controller.cc",
+    ],
+    hdrs = [
+        "pid_IC_controller.h",
+    ],
+    deps = [
+        "//modules/common:log",
+        ":pid_controller",
+        "//modules/common/math",
+        "//modules/control/proto:control_proto",
+    ],
+)
+
+cc_library(
     name = "trajectory_analyzer",
     srcs = [
         "trajectory_analyzer.cc",
@@ -180,6 +196,21 @@ cc_test(
     data = ["//modules/control:control_testdata"],
     deps = [
         ":pid_BC_controller",
+        "//modules/common/util",
+        "//modules/control/proto:control_proto",
+        "@gtest//:main",
+    ],
+)
+
+cc_test(
+    name = "pid_IC_controller_test",
+    size = "small",
+    srcs = [
+        "pid_IC_controller_test.cc",
+    ],
+    data = ["//modules/control:control_testdata"],
+    deps = [
+        ":pid_IC_controller",
         "//modules/common/util",
         "//modules/control/proto:control_proto",
         "@gtest//:main",
