--- a/modules/prediction/container/obstacles/BUILD
+++ b/modules/prediction/container/obstacles/BUILD
@@ -49,6 +49,7 @@ cc_test(
         "//modules/common/configs:config_gflags",
         "//modules/common/util",
         "//modules/perception/proto:perception_proto",
+        "//modules/prediction/common:kml_map_based_test",
         "//modules/prediction/common:prediction_gflags",
         "//modules/prediction/container/obstacles:obstacles_container",
         "@gtest//:main",
@@ -69,6 +70,7 @@ cc_test(
         "//modules/common/configs:config_gflags",
         "//modules/common/util",
         "//modules/perception/proto:perception_proto",
+        "//modules/prediction/common:kml_map_based_test",
         "//modules/prediction/common:prediction_gflags",
         "//modules/prediction/container/obstacles:obstacles_container",
         "@gtest//:main",
