--- a/modules/routing/topo_creator/BUILD
+++ b/modules/routing/topo_creator/BUILD
@@ -65,6 +65,7 @@ cc_binary(
         "//modules/common",
         "//modules/common:log",
         "//modules/common/configs:config_gflags",
+        "//modules/map/hdmap",
         "//modules/map/proto:map_proto",
         "//modules/routing/common:routing_gflags",
         "//modules/routing/proto:routing_proto",
