Perception: Deprecate map_file_path flag.

--- a/modules/map/tools/BUILD
+++ b/modules/map/tools/BUILD
@@ -11,6 +11,7 @@ cc_binary(
         "//modules/common",
         "//modules/common/configs:config_gflags",
         "//modules/common/util",
+        "//modules/map/hdmap",
         "//modules/map/proto:map_proto",
     ],
 )
@@ -38,6 +39,7 @@ cc_binary(
         "//modules/common/configs:config_gflags",
         "//modules/common/util",
         "//modules/common/util:points_downsampler",
+        "//modules/map/hdmap",
         "//modules/map/hdmap/adapter:opendrive_adapter",
         "//modules/map/proto:map_proto",
     ],
