--- a/modules/map/hdmap/BUILD
+++ b/modules/map/hdmap/BUILD
@@ -26,6 +26,19 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "hdmap_util",
+    srcs = ["hdmap_util.cc"],
+    hdrs = ["hdmap_util.h"],
+    deps = [
+        ":hdmap",
+        "//modules/common:log",
+        "//modules/common:macro",
+        "//modules/common/configs:config_gflags",
+        "//modules/common/util:string_util",
+    ],
+)
+
 filegroup(
     name = "testdata",
     srcs = glob([
