Common: Add global config as the basement of all flagfiles.

--- a/modules/control/conf/control.conf
+++ b/modules/control/conf/control.conf
@@ -1,3 +1,4 @@
+--flagfile=modules/common/data/global_flagfile.txt
 --control_conf_file=modules/control/conf/lincoln.pb.txt
 --adapter_config_path=modules/control/conf/adapter.conf
 --enable_csv_debug
