--- a/modules/routing/conf/routing.conf
+++ b/modules/routing/conf/routing.conf
@@ -1,3 +1,4 @@
+--flagfile=modules/common/data/global_flagfile.txt
 --routing_conf_file=modules/routing/conf/routing.pb.txt
 --adapter_config_path=modules/routing/conf/adapter.conf
 
