--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -1,3 +1,4 @@
+--flagfile=modules/common/data/global_flagfile.txt
 ####################################################################
 # Flags from modules/common/adapters/adapter_manager.cc
 # The adapter config path file.
