planning: add reference line info in planner interface.
todo: migrate more variable fields from frame to ReferenceLineInfo.

--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -171,6 +171,7 @@ cc_library(
         ":path_decision",
         "//modules/planning/common/path:path_data",
         "//modules/planning/common/speed:speed_data",
+        "//modules/planning/common/trajectory:discretized_trajectory",
         "//modules/planning/reference_line",
     ],
 )
