--- a/modules/planning/planner/BUILD
+++ b/modules/planning/planner/BUILD
@@ -12,6 +12,7 @@ cc_library(
         "//modules/common/status",
         "//modules/common/vehicle_state",
         "//modules/planning/common:frame",
+        "//modules/planning/common:reference_line_info",
         "//modules/planning/proto:planning_proto",
     ],
 )
