(1) Update build_opt option in 'apollo.sh'; (2) Show hdmap file path in function 'CreateMap'. (#942)
* [perception] add 'build_opt' option in apollo.sh to support the use of perception

* [perception] update fix in 'apollo.sh'

* Merge conflict

--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -43,14 +43,14 @@
 # default: 1
 --map_sample_step=1
 
-# --map_file_path=modules/map/data/sunnyvale_loop.xml.txt
+--flagfile=modules/common/data/global_flagfile.txt
 
 ####################################################################
 # Flags from obstacle/onboard/lidar_process.cc
 # enable hdmap input for roi filter
 # type: bool
 # default: false
---enable_hdmap_input=false
+--enable_hdmap_input=true
 
 # roi filter before GroundDetector.
 # type: string
