--- a/modules/prediction/conf/prediction.conf
+++ b/modules/prediction/conf/prediction.conf
@@ -3,3 +3,4 @@
 --v=4
 --adapter_config_path=modules/prediction/conf/adapter.conf
 --prediction_conf_file=modules/prediction/conf/prediction_conf.pb.txt
+--noenable_kf_tracking
