planning: added reference line info in tasks

--- a/modules/planning/tasks/BUILD
+++ b/modules/planning/tasks/BUILD
@@ -13,6 +13,7 @@ cc_library(
     deps = [
         "//modules/common/status",
         "//modules/planning/common:frame",
+        "//modules/planning/common:reference_line_info",
         "//modules/planning/common/trajectory:discretized_trajectory",
         "//modules/planning/common/trajectory:publishable_trajectory",
     ],
