planning: rename optimizer to task

--- a/modules/planning/planner/em/BUILD
+++ b/modules/planning/planner/em/BUILD
@@ -12,8 +12,8 @@ cc_library(
     ],
     deps = [
         "//external:gflags",
-        "//modules/common/configs:vehicle_config_helper",
         "//modules/common:log",
+        "//modules/common/configs:vehicle_config_helper",
         "//modules/common/status",
         "//modules/common/vehicle_state",
         "//modules/planning/common:planning_common",
@@ -44,17 +44,17 @@ cc_library(
         "//modules/map/hdmap",
         "//modules/planning/common:planning_common",
         "//modules/planning/math/curve1d:quartic_polynomial_curve1d",
-        "//modules/planning/optimizer",
-        "//modules/planning/optimizer:path_optimizer",
-        "//modules/planning/optimizer:speed_optimizer",
-        "//modules/planning/optimizer/dp_poly_path:dp_poly_path_optimizer",
-        "//modules/planning/optimizer/dp_st_speed:dp_st_speed_optimizer",
-        "//modules/planning/optimizer/qp_spline_path",
-        "//modules/planning/optimizer/qp_spline_st_speed:qp_spline_st_speed_optimizer",
         "//modules/planning/planner",
         "//modules/planning/proto:planning_proto",
         "//modules/planning/reference_line",
         "//modules/planning/reference_line:reference_line_smoother",
+        "//modules/planning/tasks:path_optimizer",
+        "//modules/planning/tasks:speed_optimizer",
+        "//modules/planning/tasks:task",
+        "//modules/planning/tasks/dp_poly_path:dp_poly_path_optimizer",
+        "//modules/planning/tasks/dp_st_speed:dp_st_speed_optimizer",
+        "//modules/planning/tasks/qp_spline_path",
+        "//modules/planning/tasks/qp_spline_st_speed:qp_spline_st_speed_optimizer",
         "@eigen//:eigen",
     ],
 )
