Dreamview: Lock properly so that new connection won't block existing ones

--- a/modules/dreamview/backend/websocket/BUILD
+++ b/modules/dreamview/backend/websocket/BUILD
@@ -11,7 +11,7 @@ cc_library(
         "websocket.h",
     ],
     deps = [
-        "//modules/common:log",
+        "//modules/common",
         "//modules/common/util:string_util",
         "//third_party/json",
         "@civetweb//:civetweb++",
